--- a/HTML/kauttoehdot.html
+++ b/HTML/kauttoehdot.html
@@ -10,7 +10,7 @@
         <h1>Juhlapeli Cup käyttöehdot</h1>
         <p><strong>Viimeksi päivitetty:</strong>13. marraskuuta 2024</p>
         <h2>Johdanto</h2>
-        <p>Tämä Käyttöehtosopimus kuvaa Käyttäjän sekä Yrityksen välistä sopimusta Käyttäjän käyttäessä Sovellusta. Käyttöehtosopimus sisältää Sinun oikeutesi ja velvollisuutesi Käyttöehtosopimuksen ollessa voimassa. Käyttämällä Sovellusta, sitoudut noudattamaan tätä Käyttöehtosopimusta, <a href="../HTML/app-privacy-policy.html" class="a-dark">Tietosuojakäytäntöämme</a> sekä <a href="../HTML/vastuullisuus.html" class="a-dark">vastuullisuusperiaatteitamme</a></p>
+        <p>Tämä Käyttöehtosopimus kuvaa Käyttäjän sekä Yrityksen välistä sopimusta Käyttäjän käyttäessä Sovellusta. Käyttöehtosopimus sisältää Sinun oikeutesi ja velvollisuutesi Käyttöehtosopimuksen ollessa voimassa. Käyttämällä Sovellusta, sitoudut noudattamaan tätä Käyttöehtosopimusta, <a href="../HTML/tietosuoja.html" class="a-dark">Tietosuojakäytäntöämme</a> sekä <a href="../HTML/vastuullisuus.html" class="a-dark">vastuullisuusperiaatteitamme</a></p>
         <h2>Tulkinnot</h2>
         <p>Kaikkien sanojen, joiden ensimmäinen kirjain on isolla, merkitykset on määritelty Määritelmät-osiossa. Määritelmät pätevät riippumatta siitä, esiintyvätkö ne yksikössä vai monikossa.</p>
         <h3>Määritelmät</h3>
