--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Juhlapeli Cup</title>
 </head>
 <body>
-    <h1>Juhlapeli</h1>
+    <h1>Juhlapeli Cup</h1>
     <ul>
         <li><a href="./HTML/kauttoehdot.html">Käyttöehdot</a></li>
         <li><a href="./HTML/tietosuoja.html">Tietosuoja</a></li>
         <li><a href="./HTML/vastuullisuus.html">Vastuullisuus</a></li>
     </ul>
+    <h3><a href="./HTML/homeEnglish.html">In English</a></h3>
 </body>
 </html>
