--- a/HTML/privacyPolicy.html
+++ b/HTML/privacyPolicy.html
@@ -1,1 +1,119 @@
-privacy policy
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <section class="section">
+    <h1>JamParty Cup Privacy Policy</h1>
+    <p><strong>Last updated:</strong> November 12, 2024</p>
+    <p>
+        This Privacy Policy describes our principles and practices regarding the collection, use, 
+        disclosure, and maintenance of information when you use the Service. It also explains your privacy rights. 
+        We use your information to provide and improve the Service. By using the Service, you agree to this 
+        Privacy Policy,<a href="../HTML/termsOfUse.html" class="a-dark">Terms of Use</a>, 
+        and you commit to following our <a href="../HTML/responsivePlaying.html" class="a-dark">responsibility principles</a>.
+    </p>
+
+    <h2>Interpretations</h2>
+    <p>
+        All words that start with a capital letter have meanings defined in the Definitions section. 
+        Definitions apply regardless of whether they appear in singular or plural form.
+    </p>
+
+    <h2>Definitions</h2>
+    <ul>
+        <li><strong>Privacy Policy</strong> refers to this document in its entirety.</li>
+        <li><strong>You</strong> refers to any individual or legal entity using the Service or Application.</li>
+        <li><strong>Company</strong> (referred to as “Company”, “We”, “Us”, or “Our”) means the business name AVA Lifestyle.</li>
+        <li><strong>Service</strong> refers to the software called JamParty Cup, provided by the Company.</li>
+        <li><strong>Application</strong> refers to the software called Juhlapeli Cup, provided by the Company.</li>
+        <li><strong>Device</strong> means any device that can use the Application, such as a mobile phone.</li>
+        <li><strong>Personal Data</strong> means information relating to an identified or identifiable individual.</li>
+        <li><strong>Usage Data</strong> refers to automatically collected data about your use of the Service, 
+            such as crash reports or session duration.</li>
+    </ul>
+
+    <h2>What information do we collect?</h2>
+    <h3>Personal Data</h3>
+    <p>
+        The Service does not collect Personal Data automatically. However, we may ask you to provide certain 
+        Personal Data, such as your name and email address, for the purposes described in the section: 
+        Use of your Personal Data.
+    </p>
+
+    <h3>Usage Data</h3>
+    <p>
+        Usage Data is collected automatically when you use the Service. Usage Data may include, among other things: 
+        the type of device you use, the device's operating system, or general usage information such as average session duration.
+    </p>
+
+    <h2>Use of Personal Data and Usage Data</h2>
+    <ul>
+        <li>Providing and maintaining the Service.</li>
+        <li>Communicating with you.</li>
+        <li>Fulfilling contracts: such as purchase agreements or other agreements through the Service.</li>
+        <li>Managing requests: to process your inquiries.</li>
+        <li>Other purposes: such as data analysis or identifying usage patterns.</li>
+    </ul>
+
+    <h2>Sharing of Information</h2>
+    <ul>
+        <li>With trusted service providers and business partners: for example, to analyze data or send messages.</li>
+        <li>With your consent: We may share your information for other purposes if you give consent.</li>
+        <li>For law enforcement and legal obligations: if required by law.</li>
+    </ul>
+
+    <h2>Data Retention</h2>
+    <p>
+        We retain your Personal Data as long as necessary for the purposes of this Privacy Policy or until you request deletion. 
+        Usage Data is retained for internal analytical purposes.
+    </p>
+
+    <h2>Data Deletion</h2>
+    <p>
+        Under GDPR (General Data Protection Regulation), you have the right to request that we delete your Personal Data. 
+        To exercise this right, contact us according to the <strong>Contact</strong> section. In some cases, we may have a legal obligation 
+        to retain your data.
+    </p>
+
+    <h3>GDPR User Rights</h3>
+    <p>The Company's location in the EU means that we comply with GDPR regulations. Your rights under GDPR include:</p>
+    <ul>
+        <li>Right to information: You have the right to know who processes your data and why.</li>
+        <li>Right of access: You have the right to access your Personal Data.</li>
+        <li>Right to rectification: You can request correction of incorrect information.</li>
+        <li>Right to erasure: You can request deletion of your data in certain circumstances.</li>
+        <li>Right to restrict processing: You can limit the processing of your data in certain situations.</li>
+        <li>Right not to be subject to automated decision-making: You have the right to avoid decisions based solely on automated processing.</li>
+    </ul>
+
+    <h2>Data Security</h2>
+    <p>
+        The security of your Personal Data is important to us, but no method over the Internet is 100% secure. 
+        While we strive to use reliable third parties and commercially accepted methods to protect your data, 
+        we cannot guarantee complete security.
+    </p>
+
+    <h2>Third-Party Links</h2>
+    <p>
+        The Service may contain links to external websites. We recommend reviewing their privacy policies.
+    </p>
+
+    <h2>Changes to the Privacy Policy</h2>
+    <p>
+        We may update this Privacy Policy from time to time. Changes take effect when they are published on this page. 
+        Please check regularly for any updates.
+    </p>
+
+    <h2>Contact</h2>
+    <p>If you have questions, you can contact us:</p>
+    <ul>
+        <li>Email: juomapelicup@gmail.com</li>
+    </ul>
+</section>
+
+</body>
+</html>
