--- a/HTML/responsivePlaying.html
+++ b/HTML/responsivePlaying.html
@@ -1,1 +1,14 @@
-Responsive gaming
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsibility</title>
+</head>
+<body>
+    <section class="section">
+        <h1>Important Notice</h1>
+        <p>Remember to take care of yourself and your fellow players. This game is intended for entertainment purposes only, and no one should be forced to continue playing if they do not want to. If substances are consumed during the game, users must be of legal age and consume alcohol responsibly. We are not responsible for any damages or consequences that may result from irresponsible gameplay.</p>
+    </section>
+</body>
+</html>
