--- a/HTML/tietosuoja.html
+++ b/HTML/tietosuoja.html
@@ -113,7 +113,7 @@
     <h2>Ota yhteyttä</h2>
     <p>Jos sinulla on kysyttävää, voit ottaa meihin yhteyttä:</p>
     <ul>
-        <li>Sähköposti: <a href="mailto:jesse.liikanen@gmail.com" class="a-dark">jesse.liikanen@gmail.com</a></li>
+        <li>Sähköposti: juomapelicup@gmail.com</li>
     </ul>
     </section>
 </body>
